--- a/index.html
+++ b/index.html
@@ -489,6 +489,15 @@
               placeholder="Text input"
             ></textarea>
           </div>
+          <div class="modal-field">
+            <input
+              type="checkbox"
+              name="user-terms"
+              id="user-terms"
+              value="one"
+              class="modal-check visually-hidden"
+            />
+          </div>
           <button type="submit">Send</button>
         </form>
       </div>
