--- a/index.html
+++ b/index.html
@@ -497,8 +497,17 @@
               value="one"
               class="modal-check visually-hidden"
             />
+            <label for="user-terms" class="check-text">
+              <span>
+                <svg class="check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="" class="privacy-link">Privacy Policy</a>
+            </label>
           </div>
-          <button type="submit">Send</button>
+          <button type="submit" class="modal-form-btn">Send</button>
         </form>
       </div>
     </div>
