--- a/index.html
+++ b/index.html
@@ -426,6 +426,17 @@
               </a>
             </li>
           </ul>
+          <form class="footer-form">
+            <label for="footer-email">Subscribe</label>
+            <input
+              type="email"
+              name="footer-email"
+              class="footer-input"
+              placeholder="E-mail"
+              id="footer-email"
+            />
+            <button type="submit" class="footer-form-btn">Subscribe</button>
+          </form>
         </div>
       </div>
     </footer>
@@ -507,7 +518,9 @@
               <a href="" class="privacy-link">Privacy Policy</a>
             </label>
           </div>
-          <button type="submit" class="modal-form-btn">Send</button>
+          <button type="submit" class="modal-form-btn form-btn-text">
+            Send
+          </button>
         </form>
       </div>
     </div>
