--- a/index.html
+++ b/index.html
@@ -426,17 +426,26 @@
               </a>
             </li>
           </ul>
-          <form class="footer-form">
-            <label for="footer-email">Subscribe</label>
-            <input
-              type="email"
-              name="footer-email"
-              class="footer-input"
-              placeholder="E-mail"
-              id="footer-email"
-            />
-            <button type="submit" class="footer-form-btn">Subscribe</button>
-          </form>
+          <div class="footer-form-container">
+            <p class="footer-form-text">Subscribe</p>
+            <form class="footer-form">
+              <label for="" class="footer-form-label">
+                <input
+                  type="email"
+                  name="footer-email"
+                  class="footer-input"
+                  placeholder="E-mail"
+                  id="footer-email"
+                />
+              </label>
+              <button type="submit" class="footer-form-btn">
+                Subscribe
+                <svg class="footer-form-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-Frame"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
@@ -458,7 +467,7 @@
                 class="modal-input"
                 id="user-name"
               />
-              <svg class="modal-input-icon" width="18" height="18">
+              <svg class="modal-input-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -492,24 +501,24 @@
             </div>
           </div>
           <div class="modal-field">
-            <label for="user-text" class="input-label">Comment</label>
+            <label for="user-comment" class="input-label">Comment</label>
             <textarea
-              name="user-text"
-              id="user-text"
+              name="user-comment"
+              id="user-comment"
               class="modal-textarea"
               placeholder="Text input"
             ></textarea>
           </div>
-          <div class="modal-field">
+          <div class="modal-checkbox">
             <input
               type="checkbox"
-              name="user-terms"
-              id="user-terms"
-              value="one"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
               class="modal-check visually-hidden"
             />
-            <label for="user-terms" class="check-text">
-              <span>
+            <label for="user-privacy" class="check-text">
+              <span class="checkbox-span">
                 <svg class="check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
