--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
           <div class="footer-form-container">
             <p class="footer-form-text">Subscribe</p>
             <form class="footer-form">
-              <label for="" class="footer-form-label">
+              <label for="footer-email" class="footer-form-label">
                 <input
                   type="email"
                   name="footer-email"
