--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-field">
+          <div class="modal-form-textarea">
             <label for="user-comment" class="input-label">Comment</label>
             <textarea
               name="user-comment"
@@ -523,7 +523,7 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
+              I accept the terms and conditions of the 
               <a href="" class="privacy-link">Privacy Policy</a>
             </label>
           </div>
